Bug 1455893 - Fix a bug where incorrect frame is used for shadow-crossing selection r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D221707